[metadata]
name = django-js-lib-ag-grid-community
version = 25.3.0.0
description = AG Grid Community (repackaged for django)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nonZero/django-js-lib-ag-grid-community
author = Udi Oron
author_email = udioron@gmail.com
license = BSD-2-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
